--- a/templates/display_html.html
+++ b/templates/display_html.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSV返回界面</title>
+    <title>CSV</title>
     <style>
+
         .button.red {
             background-color: #ca3535;
             border-color: #c43c35;
@@ -98,11 +99,18 @@
             background-image: linear-gradient(top, rgba(255, 255, 255, .3), rgba(255, 255, 255, 0));
         }
 
+         .main{
+            margin: auto;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
         }
     </style>
 </head>
 <body>
-<input type="button"  class="button red" value="返回" onclick="location.href='/'">
+<div class="main">
+<input type="button"  class="button red" value="戻る" onclick="location.href='/'">
 <br>
 <br>
 <table border="1" width="100px" height="100px" cellpadding="1p">
@@ -121,5 +129,6 @@
     {% endfor %}
     </tbody>
 </table>
+</div>
 </body>
 </html>
