--- a/templates/li.html
+++ b/templates/li.html
@@ -13,6 +13,7 @@
 }
 
 .button{
+    width: ;
   display: inline-block;
   *display: inline;
   zoom: 1;
@@ -104,6 +105,7 @@
 /* Colored buttons styles */
 
 .button.green, .button.red, .button.blue {
+    width: 270px;
   color: #fff;
   text-shadow: 0 1px 0 rgba(0,0,0,.2);
 
