--- a/templates/menu.html
+++ b/templates/menu.html
@@ -283,14 +283,14 @@
     <title>Title</title>
 </head>
 <body>
-<button class="red button" onclick="javascript:window.location.href='/serial/0'">关闭串口</button>
-<button class="red button" onclick="javascript:window.location.href='/serial/1'">打开串口</button>
+{#<button class="red button" onclick="javascript:window.location.href='/serial/0'">关闭串口</button>#}
+{#<button class="red button" onclick="javascript:window.location.href='/serial/1'">打开串口</button>#}
 
 <div class="centered">
     <form method="post" class="new_input_box">
-        <h3 class="new_input_text">请输入单个字符</h3>
-        <label class="new_input_text">字符：</label><input class="new_input" type="text" name="char" placeholder="请输入字符">
-        <input class="red button" type="submit"  value="显示">
+        <h3 class="new_input_text">文字を入力してください</h3>
+        <label class="new_input_text">文字：</label><input class="new_input" type="text" name="char" placeholder="文字を入力してください">
+        <input class="red button" type="submit"  value="検索">
 
 
         <p class="new_warnning_message">
@@ -304,7 +304,7 @@
     </form>
 
 
-    <button class="large red button" onclick="javascript:window.location.href='../lu/'">LU　手太陰肺経（てのたいいんはいけい）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">LU　手太陰肺経（てのたいいんはいけい）</button>
     {#    <button class="large red button" onclick="javascript:window.location.href='http://10.211.55.2:5000/lu/'">LU　手太陰肺経（てのたいいんはいけい）</button>#}
 
     <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">
