--- a/templates/display_html.html
+++ b/templates/display_html.html
@@ -99,21 +99,17 @@
             background-image: linear-gradient(top, rgba(255, 255, 255, .3), rgba(255, 255, 255, 0));
         }
 
-         .main{
-            margin: auto;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+         .middle{
+            margin: 0 auto;
         }
     </style>
 </head>
-<body>
-<div class="main">
+<body style="text-align: center">
+<div class="middle">
 <input type="button"  class="button red" value="戻る" onclick="location.href='/'">
 <br>
 <br>
-<table border="1" width="100px" height="100px" cellpadding="1p">
+<table style="margin: 0 auto" border="1" cellpadding="1p">
     <thead>
     </thead>
     <tbody>
