--- a/templates/li.html
+++ b/templates/li.html
@@ -13,7 +13,6 @@
 }
 
 .button{
-    width: ;
   display: inline-block;
   *display: inline;
   zoom: 1;
@@ -94,8 +93,11 @@
 /* Larger buttons styles */
 
 .button.large{
+    width: 300px;
+    text-align: center;
   padding: 40px 60px;
   text-transform: uppercase;
+    font-size: x-large;
 }
 
 .button.large:active{
@@ -105,7 +107,6 @@
 /* Colored buttons styles */
 
 .button.green, .button.red, .button.blue {
-    width: 270px;
   color: #fff;
   text-shadow: 0 1px 0 rgba(0,0,0,.2);
 
@@ -250,35 +251,35 @@
 <body>
 
        <div class="centered">
-    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">LI　手陽明大腸経（てのようめいだいちょうけい）</button>
+    <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">LI　手陽明大腸経</button>
 
     <br><br>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_01/'">LI01  商陽（しょうよう）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_02/'">LI02  二間（じかん）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_03/'">LI03  三間（さんかん）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_04/'">LI04  合谷（ごうこく）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_05/'">LI05  陽谿（ようけい）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_01/'">LI01  商陽</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_02/'">LI02  二間</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_03/'">LI03  三間</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_04/'">LI04  合谷</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_05/'">LI05  陽谿</button>
 
     <br><br>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_06/'">LI06  偏歴（へんれき）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_07/'">LI07  温溜（おんりゅう）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_08/'">LI08  下廉（げれん）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_09/'">LI09  上廉（じょうれん）</button>
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_10/'">LI10  手三里（てのさんり）</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_06/'">LI06  偏歴</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_07/'">LI07  温溜</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_08/'">LI08  下廉</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_09/'">LI09  上廉</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_10/'">LI10  手三里</button>
 
     <br><br>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_11/'">LI11  曲池（きょくち）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_12/'">LI12  肘髎（ちゅうりょう）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_13/'">LI13  手五里（てのごり）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_14/'">LI14  臂臑（ひじゅ）</button>
-    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_15/'">LI15  肩髃（けんぐう）</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_11/'">LI11  曲池</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_12/'">LI12  肘髎</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_13/'">LI13  手五里</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_14/'">LI14  臂臑</button>
+    <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_15/'">LI15  肩髃</button>
 
     <br><br>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_16/'">LI16  巨骨（ここつ）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_17/'">LI17  天鼎（てんてい）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_18/'">LI18  扶突（ふとつ）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_19/'">LI19  禾髎（かりょう）</button>
-    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_20/'">LI20  迎香（げいこう）</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_16/'">LI16  巨骨</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_17/'">LI17  天鼎</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_18/'">LI18  扶突</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_19/'">LI19  禾髎</button>
+    <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li_20/'">LI20  迎香</button>
 
 
 </div>
