--- a/templates/menu_backup.html
+++ b/templates/menu_backup.html
@@ -132,7 +132,6 @@
             padding: 40px 60px;
             text-transform: uppercase;
             width: 400px;
-            font-size: x-large;
         }
 
         .button.large:active {
@@ -305,59 +304,59 @@
     </form>
 
 
-    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/lu/'">LU 手太陰肺経</button>
+    <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">LU　手太陰肺経（てのたいいんはいけい）</button>
     {#    <button class="large red button" onclick="javascript:window.location.href='http://10.211.55.2:5000/lu/'">LU　手太陰肺経（てのたいいんはいけい）</button>#}
 
     <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/li/'">
-        LI 手陽明大腸経
+        LI　手陽明大腸経（てのようめいだいちょうけい）
     </button>
 
     <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/st/'">
-        ST 足陽明胃経
+        ST　足陽明胃経（あしのようめいいけい）
     </button>
     <br><br>
     <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/sp/'">
-        SP 足太陰脾経
+        SP　足太陰脾経（あしのたいいんひけい）
     </button>
 
 
     <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/ht/'">
-        HT 手少陰心経
+        HT　手少陰心経（てのしょういんしんけい）
     </button>
     <button class="large green button" onclick="javascript:window.location.href='http://127.0.0.1:5000/si/'">
-        SI 手太陽小腸経
+        SI　手太陽小腸経（てのたいようしょうちょうけい）
     </button>
     <br><br>
     <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/bl/'">
-        BL 足太陽膀胱経
+        BL　足太陽膀胱経（あしのたいようぼうこうけい）
     </button>
 
     <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/ki/'">
-        KI 足少陰腎経
+        KI　足少陰腎経（あしのしょういんじんけい）
     </button>
 
 
     <button class="large blue button" onclick="javascript:window.location.href='http://127.0.0.1:5000/pc/'">
-        PC 手厥陰心包経
+        PC　手厥陰心包経（てのけついんしんぽうけい）
     </button>
     <br><br>
     <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/te/'">
-        TE 手少陽三焦経
+        TE　手少陽三焦経（てのしょうようさんしょうけい）
     </button>
 
     <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/gb/'">
-        GB 足少陽胆経
+        GB　足少陽胆経（あしのしょうようたんけい）
     </button>
     <button class="large button" onclick="javascript:window.location.href='http://127.0.0.1:5000/lr/'">
-        LR 足厥陰肝経
+        LR　足厥陰肝経（あしのけついんかんけい）
     </button>
 
     <br><br>
     <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/gv/'">
-        GV 督脈
+        GV　督　脈（とくみゃく）
     </button>
     <button class="large red button" onclick="javascript:window.location.href='http://127.0.0.1:5000/cv/'">
-        CV 任脈
+        CV　任　脈（にんみゃく）
     </button>
 
 
