--- a/templates/display.html
+++ b/templates/display.html
@@ -4,6 +4,7 @@
     <style>
         body{
             margin: 0 auto;
+            text-align: center;
         }
         .button.red {
             background-color: #ca3535;
@@ -99,12 +100,11 @@
             background-image: linear-gradient(top, rgba(255, 255, 255, .3), rgba(255, 255, 255, 0));
         }
 
-        .main{
-            margin: auto;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+        .middle{
+            margin: 0 auto;
+        }
+        .middle_table{
+            margin-left: 50%;
         }
 }
 
@@ -114,13 +114,11 @@
 </head>
 <body>
 
-<div class="main">
-<input type="button" class="button red" value="戻る" onclick="location.href='/'">
+<div class="middle">
+<input type="button" style="font-size: large" class="button red" value="戻る" onclick="location.href='/'">
 <br>
 <br>
-<table border="1" width="100px" height="100px" cellpadding="1p">
-    <thead>
-    </thead>
+<table style="margin: 0 auto" border="1" cellpadding="1p">
     <tbody>
     <meta charset="UTF-8">
     {% for data in dataset %}
@@ -134,6 +132,6 @@
     {% endfor %}
     </tbody>
 </table>
-<div>
+</div>
 </body>
 </html>
